debug info added

--- a/PartsList.html
+++ b/PartsList.html
@@ -1,5 +1,7 @@
 <html>
 <body>
+The Arduino UNO is circa January 2011 as that is the date on the receipt. It has a Atmega8U2. It does not seem to need to firmware upgrade. Or at least I have not run into a situation where I needed to update the firmware. http://arduino.cc/en/Hacking/DFUProgramming8U2
+<a href="http://arduino.cc/en/Main/ArduinoBoardUno"> Arduino UNO</a>
 <table>
 <tr><td>
 </td><td>
